# typeship

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml  release.yml
crates/typebridge-ts-rs/: Cargo.toml  README.md
crates/typebridge-ts-rs/examples/: generate.rs
crates/typebridge-ts-rs/src/: lib.rs
crates/typebridge-ts-rs/tests/: complex_tsrs_adapter.rs
crates/typebridge/src/: check.rs  cli.rs  command.rs  ir.rs  lib.rs  naming.rs
crates/typebridge/tests/: complex_bridge_snapshot.rs  complex_command_surface.rs  complex_drift_guard.rs  complex_ir_rendering.rs  irodori_surface.rs  rendering.rs
crates/typeship/: Cargo.toml
crates/typeship-ts-rs/: Cargo.toml  README.ja.md  README.md
crates/typeship/src/: cli.rs  command.rs  ir.rs  lib.rs  ts.rs
crates/typeship/src/bridge/: mod.rs  rendered.rs
crates/typeship/src/ir/: decl.rs  mod.rs  ty.rs
crates/typeship/tests/: irodori_surface.rs
docs/: design-fp-principles.ja.md  design-fp-principles.md  irodori-typebridge-handoff.md  irodori-typeship-handoff.ja.md  irodori-typeship-handoff.md
fixtures/complex/expected/: complex-api-fetch.ts  complex-api.ts
fixtures/complex/rust/: complex_models.rs
fixtures/complex/ts-consumer/: exhaustive-consumer.ts  tauri-shim.d.ts  tsconfig.json
samples/basic-ir/: Cargo.toml  README.ja.md  README.md
samples/basic-ir/src/: main.rs
samples/tauri-ts-rs/: Cargo.toml  README.ja.md  README.md
samples/tauri-ts-rs/src/: main.rs
tools/: check-release-tag.mjs  release-utils.mjs  release.mjs
