[workspace]
resolver = "2"
members = ["crates/*", "samples/*"]

[workspace.package]
edition = "2021"
license = "0BSD"
repository = "https://github.com/hjosugi/typeship"
authors = ["typeship contributors"]
rust-version = "1.74"

# typeship is "fast and dependency-light by default": the core crate pulls in
# zero third-party dependencies. Keep it that way unless a backend adapter needs it.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
