[package]
name = "typeship-ts-rs"
version = "0.2.0"
description = "ts-rs backend adapter for typeship: lower `#[derive(TS)]` Rust types into typeship declarations the Bridge can assemble, check, and write."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# ts-rs 12 requires a newer toolchain than the dependency-free core crate.
rust-version = "1.78.0"
readme = "README.md"
keywords = ["typescript", "codegen", "ts-rs", "serde", "tauri"]
categories = ["development-tools"]

[dependencies]
# Path for local dev; version is required so the crate can be published to a registry.
typeship = { path = "../typeship", version = "0.2.0" }
ts-rs = "12"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
